# MCTS

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MCTS Library.cbp  README.md  README.org  install_manifest.txt
.history/MCTS/src/Core/DefaultPolicy/: DefaultPolicyBase_20191010104809.cpp
.history/MCTS/src/Core/DefaultPolicy/include/: DefaultPolicyBase_20191010104933.h  RandomDefaultPolicy_20191010104758.h
.history/MCTS/src/Environments/: CMakeLists_20191010104818.txt
MCTS/: .gitignore  CMakeLists.txt  Doxyfile.in
MCTS/.history/src/Core/: CMakeLists_20191016121129.txt
MCTS/.history/src/Core/DefaultPolicy/: CMakeLists_20191015122125.txt  CMakeLists_20191016135206.txt  CMakeLists_20191016135250.txt  CMakeLists_20191016135259.txt  CMakeLists_20191016135331.txt  DefaultPolicyBase_20191016121043.cpp  DefaultPolicyBase_20191016123121.cpp  RandomDefaultPolicy_20191015111730.cpp  RandomDefaultPolicy_20191016125828.cpp  RandomDefaultPolicy_20191016135818.cpp  TicTacToeDefaulPolicy_20191015111913.cpp  TicTacToeDefaultPolicy_20191015133555.cpp  TicTacToeDefaultPolicy_20191016123334.cpp  TicTacToeDefaultPolicy_20191016124004.cpp  TicTacToeDefaultPolicy_20191016135814.cpp
MCTS/.history/src/Core/DefaultPolicy/include/: DefaultPolicyBase_20191015133557.h  DefaultPolicyBase_20191016121042.h  DefaultPolicyBase_20191016122525.h  DefaultPolicyBase_20191016122718.h  DefaultPolicyBase_20191016122840.h  DefaultPolicyBase_20191016123019.h  DefaultPolicyBase_20191016131126.h  DefaultPolicyBase_20191016135516.h  DefaultPolicyBase_20191016135632.h  RandomDefaultPolicy_20191015111732.h  RandomDefaultPolicy_20191016122522.h  RandomDefaultPolicy_20191016123101.h  RandomDefaultPolicy_20191016135811.h  TicTacToeDefaultPolicy_20191015111905.h  TicTacToeDefaultPolicy_20191016122517.h  TicTacToeDefaultPolicy_20191016122912.h  TicTacToeDefaultPolicy_20191016122946.h  TicTacToeDefaultPolicy_20191016135813.h
MCTS/.history/src/Environments/include/: EnvironmentBase_20191009130925.h  EnvironmentBase_20191016135655.h
MCTS/src/: doxygen_example.cpp  main.cpp
MCTS/src/Core/: CMakeLists.txt  MCTSBase.cpp  MCTSBase.h  SearchNode.cpp  UCT.cpp  UCT.h
MCTS/src/Core/DefaultPolicy/: CMakeLists.txt  DefaultPolicyBase.cpp  RandomDefaultPolicy.cpp  TicTacToeDefaultPolicy.cpp
MCTS/src/Core/DefaultPolicy/include/: DefaultPolicyBase.h  RandomDefaultPolicy.h  TicTacToeDefaultPolicy.h
MCTS/src/Core/include/: SearchNode.h  State.h
MCTS/src/Core/mcts/: CMakeLists.txt  MCTSBase.cpp  UCT.cpp
MCTS/src/Core/mcts/include/: MCTSBase.h  UCT.h
MCTS/src/Core/tree_policies/: CMakeLists.txt  TreePolicyBase.cpp  UCT_treePolicy.cpp
MCTS/src/Core/tree_policies/include/: TreePolicyBase.h  UCT_treePolicy.h
MCTS/src/Environments/: CMakeLists.txt  EnvironmentBase.cpp  EnvironmentBase.h  TicTacToeEnvironment.cpp
MCTS/src/Environments/include/: EnvironmentBase.h  State.h  TicTacToeEnvironment.h  TicTacToeEnvironment.h~
MCTS/test/: CMakeLists.txt  test_main.cpp
MCTS/test/test_environments/: CMakeLists.txt  test_tictactoe.cpp
MCTS_Library/: CMakeLists.txt
MCTS_Prototyping/: main.py  runner.py  utils.py
MCTS_Prototyping/Environments/: tictactoe.py
MCTS_Prototyping/MCTS/: MCTS.py  backpropagation.py  best_child.py  default_policies.py  tree_policies.py
cmake/: MCTSConfig.cmake.in
src/: main.cpp
src/Core/: CMakeLists.txt  SearchNode.cpp  Utils.cpp
src/Core/DefaultPolicy/: CMakeLists.txt  DefaultPolicyBase.cpp  RandomDefaultPolicy.cpp  RandomSamplingDefaultPolicy.cpp  TicTacToeDefaultPolicy.cpp
src/Core/DefaultPolicy/include/: DefaultPolicyBase.h  RandomDefaultPolicy.h  RandomSamplingDefaultPolicy.h  TicTacToeDefaultPolicy.h
src/Core/backpropagation/: BackupBase.cpp  BackupNegamax.cpp  BasicBackup.cpp  CMakeLIsts.txt  CMakeLists.txt
src/Core/backpropagation/include/: BackupBase.h  BackupNegamax.h  BasicBackup.h
src/Core/default_policy/: CMakeLists.txt  DefaultPolicyBase.cpp  RandomSamplingDefaultPolicy.cpp  TicTacToeDefaultPolicy.cpp  UPPAAL_RandomSamplingDefaultPolicy.cpp
src/Core/default_policy/include/: DefaultPolicyBase.h  RandomSamplingDefaultPolicy.h  TicTacToeDefaultPolicy.h  UPPAAL_RandomSamplingDefaultPolicy.h
src/Core/include/: SearchNode.h  Utils.h
src/Core/mcts/: CMakeLists.txt  MCTSBase.cpp  MCTSCustom.cpp  MCTSEntry.cpp  MCTSInterface.cpp  UCT.cpp  UCT_UPPAAL.cpp  UCT_two_players.cpp
src/Core/mcts/include/: MCTSBase.h  MCTSCustom.h  MCTSEntry.h  MCTSInterface.h  UCT.h  UCT_UPPAAL.h  UCT_two_players.h
src/Core/runner/: CMakeLists.txt  Runner.cpp  RunnerTicTacToe.cpp
src/Core/runner/include/: Runner.h  RunnerTicTacToe.h
src/Core/tree_policies/: CMakeLists.txt  TreePolicyBase.cpp  UCT_TreePolicy.cpp
src/Core/tree_policies/include/: TreePolicyBase.h  UCT_TreePolicy.h  UCT_treePolicy.h
src/Core/tree_policy/: CMakeLists.txt  TreePolicyBase.cpp  UCT_TreePolicy.cpp
src/Core/tree_policy/include/: TreePolicyBase.h  UCT_TreePolicy.h
src/Environments/: CMakeLists.txt  EnvironmentInterface.cpp  State.cpp  TicTacToeEnvironment.cpp
src/Environments/include/: EnvironmentBase.h  EnvironmentInterface.h  State.h  State.tcc  TicTacToeEnvironment.h
test/: CMakeLists.txt  test_TicTacToeDefaultPolicy2.cpp
test/test_backpropagation/: CMakeLists.txt  test_basicbackup.cpp
test/test_core/: CMakeLists.txt  test_SearchNode.cpp
test/test_core/test_backpropagation/: CMakeLists.txt  test_basicbackup.cpp
test/test_core/test_defaultpolicy/: CMakeLists.txt  test_TicTacToeDefaultPolicy.cpp
test/test_core/test_mcts/: CMakeLists.txt  test_UCT.cpp
test/test_core/test_runner/: CMakeLists.txt  test_RunnerTicTacToe.cpp
test/test_core/test_tree_policies/: CMakeLists.txt  test_UCT_TreePolicy.cpp
test/test_defaultpolicy/: CMakeLists.txt  test_TicTacToeDefaultPolicy.cpp
test/test_environments/: CMakeLists.txt  test_state.cpp  test_tictactoe.cpp
